--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-	<link rel="stylesheet" href="/style.css">
-	<meta charset="UTF-8">
 	<title>TicTacToe by DasBobbit</title>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -65,7 +65,7 @@
 		</div>
 	</div>
 
-	<script src="/script.js"></script>
+	<script src="script.js"></script>
 </body>
 
 </html>
